unpackaged/main/default/objects/Account/fields/SLASerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SLASerialNumber__c</fullName>
    <description>Capture the 5 digit long serial number for the user's SLA.</description>
    <label>SLA Serial Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>