unpackaged/main/default/objects/Account/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>You have version - 1.2 - installed in this org. Search "golden org" in Slack to see if there are any updates available.</description>
    <label>Version</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>